# stc

./: .gitignore  Cargo.toml  GNUmakefile  build.rs  license.spdx  readme.md  shell.nix
.github/workflows/: CI.yml  latest.yml  next.yml  release.yml
contrib/: libvirt-purge.sh
examples/: libvirt-laptop.yaml  libvirt.yaml
src/: asset.rs  lib.rs  main.rs  stc.rs
tf/: cloud-config.template  globals.tf  known-hosts.template  providers.tf  ssh-config.template
tf/providers/: libvirt.tf
